# AI-book

./: 404.html  LICENSE  README.md  about.html  faq.html  feed.xml  index.html  instructions.html
.github/workflows/: main.yml
8Puzzle/: 8Puzzle_Astar.py  8Puzzle_RL.py  EightPuzzle_RL.py  EightPuzzle_astar.py  Game_UI.py  README.md  main.py  pyproject.toml
8Puzzle_game/: 8PuzzleGame.py  AI.py  Label.py  README.md  pyproject.toml
Cat_or_Dog/: Conv_operation.py  README.md  main.py  pyproject.toml  train.py
Cat_or_Dog/model_CustomCNN/: keras_metadata.pb  saved_model.pb
Cat_or_Dog/model_CustomCNN/variables/: variables.index
Connect4/: README.md  bot.py  common.py  connect4game.py  main.py  minimax.py  monte_carlo.py  pyproject.toml
DecisionTrees/: main.py  pyproject.toml
NanoGPT/: README.md  main.py  pyproject.toml
Shortest_Path/: Algorithm.py  AlgorithmChebyshev.py  AlgorithmEuclidean.py  AlgorithmMean.py  Dijkstra.py  FileHandler.py  GUI.py  InstancesGenerator.py  README.md  View.py  main.py  mainGenerator.py  pyproject.toml
Shortest_Path/datasets/: 1118_nodes.txt  13_nodes.txt  15_nodes.txt  20_nodes.txt  244_nodes.txt  40_nodes.txt  73_nodes.txt  8435_nodes.txt  8439_nodes.txt
Snake/: Astar_snake.py  README.md  dna.py  gameModule.py  genetic_snake.py  hamiltonian_Astar_snake.py  hamiltonian_cycle.py  main.py  neuralNetwork.py  pyproject.toml  snake.py  snakeManager.py  snakeTrainer.py  train.py
Snake/weights/: 151.snake  159.snake  77.snake  98.snake
SpamDetector/: README.md  main.py  pyproject.toml  spam.py
SpamDetector2/: main.py  pyproject.toml
SpamDetector2/datasets/: dataset.example.test.csv  dataset.sms.test.csv  dataset.sms.train.csv  parse.py  sources.md
SpamDetector2/spamdetect/: __init__.py  metrics.py  preprocessing.py  wrappers.py
Sudoku/: README.md  Weights0.py  Weights1.py  Weights2.py  Weights30.py  Weights31.py  Weights32.py  astar.py  genetic_algorithm.py  main.py  network.py  pyproject.toml  readSudokus.py  search.py  sudoku_alg.py  sudoku_gui.py  sudokus.txt
Sudoku/sudokus/: sudoku1.txt  sudokus.txt
Tetris/: README  README.md  agent.py  pyproject.toml  run.py  tetris.py  train.py
Tetris/TetrisGA/: GUI_Menu.py  GUI_RunMenu.py  README.md  Tetris.py  TetrisAgents.py  TetrisParallel.py  TetrisSettings.py  TetrisSolo.py  TetrisUtils.py  evaluation.py  pyproject.toml  training.py
Tetris/TetrisGA/SavedModel/: model_gen_1.csv  model_gen_10.csv  model_gen_11.csv  model_gen_12.csv  model_gen_13.csv  model_gen_14.csv  model_gen_15.csv  model_gen_16.csv  model_gen_17.csv  model_gen_18.csv  model_gen_19.csv  model_gen_2.csv  model_gen_20.csv  model_gen_21.csv  model_gen_22.csv  model_gen_23.csv  model_gen_24.csv  model_gen_25.csv  model_gen_26.csv  model_gen_27.csv  model_gen_28.csv  model_gen_29.csv  model_gen_3.csv  model_gen_30.csv  model_gen_31.csv  model_gen_32.csv  model_gen_33.csv  model_gen_34.csv  model_gen_35.csv  model_gen_36.csv  model_gen_4.csv  model_gen_5.csv  model_gen_6.csv  model_gen_7.csv  model_gen_8.csv  model_gen_9.csv
Tetris/TetrisRL/: README.md  agent.py  main.py  weights.h5
assets/css/: just-the-docs-dark.css  just-the-docs-dark.css.map  just-the-docs-default.css  just-the-docs-default.css.map  just-the-docs-light.css  just-the-docs-light.css.map
assets/js/: just-the-docs.js  search-data.json
docs/: 8puzzle.html  FAQ.md  Gemfile  Instructions.md  SpamDetec.html  SpamDetec2.html  _config.yml  about.md  catdog.html  connect4.html  decisiontree.html  index.md  nanogpt.html  nlp.html  shortest.html  snake.html  sudoku.html  tetris.html
docs/docs/: 8puzzle.md  SpamDetec.md  SpamDetec2.md  catdog.md  connect4.md  decisiontree.md  nanogpt.md  nlp.md  shortest.md  snake.md  sudoku.md  tetris.md
nlp/: LDA.py  pyproject.toml
