[tool.poetry]
name = "8puzzle"
version = "0.1.0"
description = "The 8 Puzzle game AI, using reinforcement learning and A* search"
authors = ["Ken <ken@kenh.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.5"
pygame = ">=2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
