[tool.poetry]
name = "decisionTree"
version = "0.1.0"
description = ""
authors = ["Ken <ken@kenh.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
matplotlib = ">=3"
numpy = ">=1.19"
pandas = ">=1.2"
scikit-learn = ">=0.2"
seaborn = ">=0.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
