[tool.poetry]
name = "SpamDetector"
version = "0.1.0"
description = ""
authors = ["Ken <ken@kenh.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
numpy = ">=1.19"
matplotlib = ">=3"
wordcloud = ">=1.7.0" 
pandas = ">=1.1.5"
nltk = ">=3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
