[tool.poetry]
name = "tetris"
version = "0.1.0"
description = ""
authors = ["Ken <ken@kenh.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
matplotlib = ">=3"
numpy = ">=1.19"
tensorflow = ">=2.4"
Pillow = ">=7"
opencv-python = ">=4"
tqdm = "*" 

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
