[tool.poetry]
name = "LDA"
version = "0.1.0"
description = ""
authors = ["Ken <ken@kenh.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
matplotlib = ">=3"
numpy = ">=1.19"
wordcloud = ">=1.8"
gensim = ">=4"
nltk = ">=3.8"
scikit-learn = ">=1"
seaborn = ">=0.1"
scipy = ">=1.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
